--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,3 @@
-/* =================================
-------------------------------------
-  WebUni - Education Template
-  Version: 1.0
- ------------------------------------ 
- ====================================*/
-
-/*----------------------------------------*/
-/* Template default CSS
-/*----------------------------------------*/
 
 html,
 body {
@@ -290,12 +280,12 @@ ol {
 }
 
 .header-btn {
-	/* float: right;
-	margin-right: 0; */
+	float: right;
+	margin-right: 0;
 }
 
 .nav-switch {
-	/* display: none; */
+	display: none;
 }
 
 /*------------------
@@ -1579,7 +1569,7 @@ ol {
 		font-size: 40px;
 	}
 	.header-btn {
-		/* display: none; */
+		display: none;
 	}
 	.nav-switch {
 		display: block;
@@ -1754,3 +1744,4 @@ ol {
 	.contact-info-area .social-links a {
 		margin-right: 10px;
 	}
+}
